# radiosonde-teamxuk

./: .gitignore  .readthedocs.yaml  INSTALL.md  LICENSE  MANIFEST.in  PACKAGE_SETUP.md  README.md  metadata_ncas-radiosonde-1.json  metadata_ncas-radiosonde-2.json  process_radiosondes.py  pyproject.toml  requirements.txt  teamx_radiosondes.ipynb  test_install.py  test_trajectory.py
docs/: README.md  conf.py  index.rst  installation.md  quickstart.md  requirements.txt  usage.md
docs/_build/html/: .buildinfo  api.html  contributing.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  usage.html
docs/_build/html/.doctrees/: api.doctree  contributing.doctree  index.doctree  installation.doctree  quickstart.doctree  usage.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/radiosonde_teamxuk/: generate_quicklooks.html  process_radiosondes.html
docs/_build/html/_sources/: api.rst.txt  contributing.md.txt  index.rst.txt  installation.md.txt  usage.md.txt
radiosonde_teamxuk/: __init__.py  generate_quicklooks.py  metadata_ncas-radiosonde-1.json  metadata_ncas-radiosonde-2.json  process_radiosondes.py
test_input/: bufr309052_20250224_1101_0.bfr
